--- a/.bumpver.toml
+++ b/.bumpver.toml
@@ -4,6 +4,7 @@ version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump version {old_version} → {new_version}"
 tag_message = "release {new_version}"
 tag_name = "v{new_version}"
+commit = true
 push = true
 
 [bumpver.file_patterns]
