updating bump to match project toml

--- a/.bumpver.toml
+++ b/.bumpver.toml
@@ -8,6 +8,6 @@ commit = true
 push = true
 
 [bumpver.file_patterns]
-"pyproject.toml" = [
+"project.toml" = [
     'version = "{current_version}"',
 ]
