--- a/.bumpver.toml
+++ b/.bumpver.toml
@@ -7,7 +7,8 @@ tag_name = "v{new_version}"
 commit = true
 push = true
 
-[bumpver.file_patterns]
+[bumpver.regex_patterns]
 "pyproject.toml" = [
-    'version = "{current_version}"',    
-    ]
+    'version\s*=\s*"{current_version}"',
+]
+
