--- a/.bumpver.toml
+++ b/.bumpver.toml
@@ -1,15 +1,14 @@
 [bumpver]
-current_version = "1.2.4"
+current_version = "1.2.2"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump version {old_version} → {new_version}"
-tag_message = "release {new_version}"
+tag_message = "release v{new_version}"
 tag_name = "v{new_version}"
-commit = true
-push = true
-tag = true
+commit = false
+tag = false
+push = false
 
-[bumpver.regex_patterns]
+[bumpver.file_patterns]
 "pyproject.toml" = [
-    'version\s*=\s*"{current_version}"',
+    '^version\s*=\s*"{current_version}"',
 ]
-
