--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tuxtoaster"
-version = "1.2.3"
+version = "1.2.3bump"
 description = "All-in-one Linux stress and benchmarking toolkit"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -37,3 +37,20 @@ Homepage = "https://github.com/samatild/tuxtoaster"
 Repository = "https://github.com/samatild/tuxtoaster.git"
 Issues = "https://github.com/samatild/tuxtoaster/issues"
 
+
+[tool.bumpver]
+current_version = "1.2.3"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message = "bump: {old_version} → {new_version}"
+tag_format = "v{new_version}"
+commit = true
+tag = true
+push = false
+
+[tool.bumpver.file_patterns]
+"pyproject.toml" = [
+  'version = "{version}"',
+]
+"setup.cfg" = [
+  "version = {version}",
+]
