--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tuxtoaster"
-version = "1.2.3bump"
+version = "1.2.3"
 description = "All-in-one Linux stress and benchmarking toolkit"
 readme = "README.md"
 requires-python = ">=3.8"
