tag replacement for bumpver

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ Issues = "https://github.com/samatild/tuxtoaster/issues"
 current_version = "1.2.5"
 version_pattern = "MAJOR.MINOR.PATCH"
 commit_message = "bump: {old_version} → {new_version}"
-tag_name = "v{new_version}"
+tag_message = "v{new_version}"
 commit = true
 tag = true
 push = false
