--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,11 @@ license_files = LICENSE
 packages = find:
 package_dir =
     = src
-python_requires = >=3.8
+python_requires = >=3.6
 install_requires =
     psutil>=5.9
     simple-term-menu>=1.6.1
+    importlib-metadata>=4,<5; python_version<'3.8'
 
 [options.packages.find]
 where = src
